# wasi-passthrough

./: Cargo.toml  README.md  flake.nix
crates/blobstore/: Cargo.toml
crates/blobstore/src/: bindings.rs  blobstore.rs  container.rs  lib.rs  types.rs
crates/blobstore/wit/: deps.toml  passthrough.wit
crates/ext/: Cargo.toml
crates/ext/src/: bindings.rs  ext.rs  lib.rs
crates/ext/wit/: deps.toml  passthrough.wit
crates/keyvalue/: Cargo.toml
crates/keyvalue/src/: bindings.rs  keyvalue.rs  lib.rs
crates/keyvalue/wit/: passthrough.wit
crates/logging/: Cargo.toml
crates/logging/src/: bindings.rs  lib.rs  logging.rs
crates/logging/wit/: deps.toml  passthrough.wit
src/: bindings.rs  cli.rs  clocks.rs  ext.rs  filesystem.rs  http.rs  io.rs  lib.rs  random.rs  sockets.rs
tests/: all.rs
tests/components/all/: Cargo.toml
wit/: deps.toml  passthrough.wit
