[package]
name = "wasi-passthrough"
version = "0.4.0"
description = "WASI reexport layer"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/wasiext/passthrough"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wasiext/passthrough"

[workspace]
members = ["crates/*", "tests/components/*"]

[dependencies]
wit-bindgen = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
wasi-preview1-component-adapter-provider = { workspace = true }
wit-component = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
wasi-passthrough = { version = "0.4", path = "." }
wasi-passthrough-ext = { path = "./crates/ext" }
wasi-passthrough-keyvalue = { path = "./crates/keyvalue" }
wasi-passthrough-logging = { path = "./crates/logging" }
wasi-preview1-component-adapter-provider = { version = "25", default-features = false }
wit-bindgen = { version = "0.34", default-features = false, features = [
    "realloc",
    "macros",
] }
wit-component = { version = "0.219", default-features = false }
