[package]
name = "wasi-passthrough-blobstore"
version = "0.1.0"
description = "wasi:blobstore passthrough layer"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen = { workspace = true }
