[package]
name = "wasi-passthrough-ext"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wasi-passthrough = { workspace = true }
wit-bindgen = { workspace = true }
