[package]
name = "wasi-passthrough-ext"
version = "0.1.1"
description = "wasiext:passthrough passthrough layer"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wasi-passthrough = { workspace = true }
wit-bindgen = { workspace = true }
