[package]
name = "wasi-passthrough-keyvalue"
version = "0.1.1"
description = "wasi:keyvalue passthrough layer"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen = { workspace = true }
