[package]
name = "wasi-passthrough-logging"
version = "0.2.1"
description = "wasi:logging passthrough layer"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen = { workspace = true }
